--- a/public/style.css
+++ b/public/style.css
@@ -170,7 +170,7 @@ html[data-bs-theme="dark"] #site-title {
   cursor: text;
 }
 
-/* quand la cellule prend le focus pour édition */
+/* when cells is focused for editing */
 .excel-table tbody td.excel-cell:focus {
   outline: 2px solid #0d6efd;
   outline-offset: -1px;
@@ -182,18 +182,18 @@ html[data-bs-theme="dark"] #site-title {
   position: relative;
 }
 
-/* Hover sur la ligne pour mieux suivre visuellement */
+/* Hover on line for brtter visual */
 .excel-table tbody tr:hover {
   background-color: rgba(0, 0, 0, 0.03);
 }
 
-/* Checkbox centrée */
+/* centered checkbox */
 .excel-table tbody td.excel-cell input[type="checkbox"] {
   display: block;
   margin: 0 auto;
 }
 
-/* Mode sombre : harmoniser le tableau */
+/* dark mode */
 html[data-bs-theme="dark"] .excel-table tbody td.excel-cell {
   border-top-color: rgba(255,255,255,0.1);
 }
